# cosmos-vanity-nvidia

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/address/: Cargo.toml
crates/address/src/: lib.rs
crates/bench/: Cargo.toml
crates/bench/benches/: vanity_bench.rs
crates/bench/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/gpu/: Cargo.toml
crates/gpu/src/: backend.rs  backend_tests.rs  cuda.rs  lib.rs  opencl.rs  search.rs  state.rs
crates/gpu/src/kernels/: mnemonic_pipeline.cl  secp256k1.cl  vanity_search.cl
crates/keyderiv/: Cargo.toml
crates/keyderiv/src/: lib.rs
crates/verify/: Cargo.toml
crates/verify/src/: lib.rs
docs/: PRD-multi-nvidia-gpu-support.md
