[package]
name = "cosmos-vanity-address"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cosmos Bech32 address generation from public keys (SHA-256 + RIPEMD-160)"

[dependencies]
sha2 = { workspace = true }
ripemd = { workspace = true }
bech32 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
regex-lite = { workspace = true }

[dev-dependencies]
cosmos-vanity-keyderiv = { workspace = true }
